--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Christmas Button</title>
 	<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+	 <link href="style.css" text="text/css" rel="stylesheet">
 </head>
 <body>
 	<div class="bg">
